k8s/application/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: flask-service
  namespace: sre-app

  labels:
    app: flask-app

spec:

  type: ClusterIP

  selector:
    app: flask-app

  ports:

      port: 80
      targetPort: 5000
      protocol: TCP
