k8s/application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: flask-ingress
  namespace: sre-app

  annotations:
    nginx.org/redirect-to-https: "false"

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: flask-service
                port:
                  number: 80
